Workspace location bug fixed.
Minor update for t-value look up.